Added GC logs which can be helpful to investigate performance issue